--- a/src/components/Setting/Setting.scss
+++ b/src/components/Setting/Setting.scss
@@ -1,15 +1,14 @@
-#SettingPage{
+#SettingPage {
     // border: solid red 2px;
     height: 100%;
-    
-    #button{
-        box-shadow: 0 0 5px  rgba(0, 0, 0, 0.4);
+    #username {
+        height: 30px;
+    }
+    #button {
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
         margin-top: 100px;
         font-family: "Baloo 2";
         text-align: center;
-
         vertical-align: middle;
-
-        
     }
 }
