--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -151,6 +151,10 @@
                     width: 80%;
                     // max-width: 1400px;
                     padding: 0px 10px;
+                    border-radius: 20px;
+                }
+                .MuiPaper-root {
+                    border-radius: 20px;
                 }
                 #profile {
                     // border: solid red 2px;
