--- a/src/components/Feedback/Feedback.scss
+++ b/src/components/Feedback/Feedback.scss
@@ -1,170 +1,178 @@
 #feedback_page {
-    height: 100%;
-    width: 100vw;
-    font-family: "Baloo 2";
-    overflow: hidden;
-    #content {
-        overflow-x: hidden;
-        display: flex;
-        height: 100vh;
-        flex-direction: column;
-        justify-content: fex-start;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: calc(300px + 25vw);
-        #logo {
-            height: auto;
-            width: 40px;
-            margin-left: 25px;
-        }
-        #carousel {
-            max-height: 500px;
-            #sub-carousel {
-           
-                #img {
-                    margin: 0px auto;
-                    max-width: 100%;
-                    max-height: 500px;
-                    object-fit: contain;
-                }
-
-            }
-        }
-        #carousel-single {
-
-            max-width: 100%;
-            max-height: 35vh;
-            align-self: center;
-        }
-        #text {
-            align-items: flex-start;
-            flex-direction: column;
-            margin-top: 60px;
-            max-width: 100%;
-            #user {
-                display: flex;
-                // border: solid red 2px;
-                max-width: 100%;
-                height: 40px;
-                justify-content: space-between;
-                padding-right: 10px;
-                padding-left: 10px;
-                #name {
-                    display: flex;
-                    margin: 5px 20px 5px 0px;
-                    font-size: 25px;
-                    max-width: 100%;
-                    flex-flow: column wrap;
-                }
-            }
-            #link {
-                margin-top: auto;
-                margin-bottom: auto;
-            }
-            #form {
-                // border: solid red 2px;
-                max-width: 100%;
-                height: 170px;
-                display: flex;
-                flex-direction: column;
-                padding: 5px 10px;
-                #tempName {
-                    // border: solid red 2px;
-                    margin-left: 0px;
-                    margin-right: auto;
-                    max-width: 250px;
-                }
-                #tempName {
-                    min-width: 100%;
-                    margin-right: auto;
-                    display: flex;
-                    flex-direction: column;
-                }
-                .MuiFormControl-root {
-                    display: flex;
-                    min-width: 100%;
-                }
-                #submit_box {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-start;
-                    #submit {
-                        max-width: 200px;
-                        min-width: 120px;
-                        height: 40px;
-                        border: solid rgba(0, 0, 0, 0.185) 2px;
-                        margin-right: 0px;
-                        margin-left: auto;
-                        margin-top: auto;
-                        margin-bottom: auto;
-                        background-color: #77D1C8;
-                        font-family: "Baloo 2";
-                        font-size: 17px;
-                    }
-                    #thumbs {
-                        padding: 10px 0px 5px 0px;
-                        // border: solid red 2px;
-                        max-width: 100%;
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        margin-left: 0px;
-                        margin-right: 0px;
-                        .highlight1 {
-                            background-color: #37db684d;
-                        }
-                        .highlight2 {
-                            background-color: rgb(238, 178, 178);
-                        }
-                        #button {
-                            font-size: 40px;
-                        }
-                    }
-                }
-                #error {
-                    position: absolute;
-                    margin-top: 0px;
-                    margin-left: 230px;
-                    color: red;
-                    border: solid red 2px;
-                    padding: 5px;
-                    border-radius: 10px;
-                }
-            }
-        }
+  height: 100%;
+  width: 100vw;
+  font-family: "Baloo 2";
+  overflow: hidden;
+  #content {
+    overflow-x: hidden;
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: fex-start;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: calc(300px + 25vw);
+    #logo {
+      height: auto;
+      width: 40px;
+      margin-left: 25px;
     }
-    #complete {
-        height: 100vh;
-        width: 100vw;
+    #carousel {
+      max-height: 500px;
+      #sub-carousel {
+        #img {
+          margin: 0px auto;
+          max-width: 100%;
+          max-height: 500px;
+          object-fit: contain;
+        }
+      }
+    }
+    #carousel-single {
+      max-width: 100%;
+      max-height: 35vh;
+      align-self: center;
+    }
+    #text {
+      align-items: flex-start;
+      flex-direction: column;
+      margin-top: 60px;
+      max-width: 100%;
+      #user {
         display: flex;
-        flex-direction: column;
         // border: solid red 2px;
-        justify-content: center;
-        #logo {
-            margin-top: -50px;
-            align-self: center;
-            width: 150px;
+        max-width: 100%;
+        height: 40px;
+        justify-content: space-between;
+        padding-right: 10px;
+        padding-left: 10px;
+        #name {
+          display: flex;
+          margin: 5px 20px 5px 0px;
+          font-size: 25px;
+          max-width: 100%;
+          flex-flow: column wrap;
         }
-        #text {
+      }
+      #link {
+        margin-top: auto;
+        margin-bottom: auto;
+      }
+      #form {
+        // border: solid red 2px;
+        max-width: 100%;
+        height: 170px;
+        display: flex;
+        flex-direction: column;
+        padding: 5px 10px;
+        #tempName {
+          // border: solid red 2px;
+          margin-left: 0px;
+          margin-right: auto;
+          max-width: 250px;
+        }
+        #tempName {
+          min-width: 100%;
+          margin-right: auto;
+          display: flex;
+          flex-direction: column;
+        }
+        .MuiFormControl-root {
+          display: flex;
+          min-width: 100%;
+        }
+        #submit_box {
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-start;
+          #submit {
+            max-width: 200px;
+            min-width: 120px;
+            height: 40px;
+            border: solid rgba(0, 0, 0, 0.185) 2px;
+            margin-right: 0px;
+            margin-left: auto;
+            margin-top: auto;
+            margin-bottom: auto;
+            background-color: #77d1c8;
+            font-family: "Baloo 2";
+            font-size: 17px;
+          }
+          #thumbs {
+            padding: 10px 0px 5px 0px;
             // border: solid red 2px;
-            margin-top: -30px;
-            font-size: 50px;
-            font-weight: 800;
-            color: rgb(88, 87, 87);
+            max-width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-left: 0px;
+            margin-right: 0px;
+            .highlight1 {
+              background-color: #37db684d;
+            }
+            .highlight2 {
+              background-color: rgb(238, 178, 178);
+            }
+            #button {
+              font-size: 40px;
+            }
+          }
         }
-        #link {
-            background-color: #77D1C8;
-            margin: 0px auto;
-            border: solid rgba(0, 0, 0, 0.199) 2px;
-            border-radius: 5px 5px;
-            text-decoration: none;
-            font-size: 20px;
-            padding: 5px 10px;
-            font-weight: 800;
-            color: rgb(241, 241, 241);
-            text-shadow: 1px 1px 1px #000;
-            white-space: nowrap;
+        #error {
+          position: absolute;
+          margin-top: 0px;
+          margin-left: 230px;
+          color: red;
+          border: solid red 2px;
+          padding: 5px;
+          border-radius: 10px;
         }
+      }
     }
-    #loading {}
+  }
+  #complete {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    // border: solid red 2px;
+    justify-content: center;
+    #logo {
+      //   border: solid red 2px;
+      margin-top: -50px;
+      align-self: center;
+      width: 150px;
+      margin-bottom: -30px;
+    }
+    #text {
+      // border: solid red 2px;
+      margin-top: -30px;
+      font-size: 50px;
+      font-weight: 800;
+      color: rgb(88, 87, 87);
+    }
+    #link {
+      background-color: #77d1c8;
+      margin: 0px auto;
+      border: solid rgba(0, 0, 0, 0.199) 2px;
+      border-radius: 5px 5px;
+      text-decoration: none;
+      font-size: 20px;
+      padding: 5px 10px;
+      font-weight: 800;
+      color: rgb(241, 241, 241);
+      text-shadow: 1px 1px 1px #000;
+      white-space: nowrap;
+    }
+    #text-small {
+      //   border: solid red 2px;
+      font-size: 20px;
+      font-weight: 800;
+      width: 200px;
+      margin: 0px auto;
+      color: rgb(88, 87, 87);
+    }
+  }
+  #loading {
+  }
 }
