--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -5,7 +5,7 @@
     margin-right: auto;
     #closet-header {
         height: 100px;
-        max-width: 890px;
+        max-width: 97%;
         margin: 0px auto auto 0px;
         margin-left: 20px;
         border-radius: 20px;
@@ -130,17 +130,18 @@
         display: flex;
         flex-direction: column;
         height: 550px;
-        #top-row {
-            font-size: 20px;
-            text-align: center;
-            font-weight: 600;
-            display: flex;
-            justify-content: space-between;
-        }
+        // #top-row {
+        //     font-size: 20px;
+        //     text-align: center;
+        //     font-weight: 600;
+        //     display: flex;
+        //     justify-content: space-between;
+        // }
         #row {
             display: flex;
             // border: solid red 2px;
-            margin: 10px;
+            margin-top: 5px;
+            margin-bottom: 5px;
             padding: 5px;
             .MuiTypography-body1 {
                 font-size: 20px;
@@ -152,31 +153,55 @@
             }
             #field {
                 margin-left: 20px;
+                #Color-Form {
+                    #Color-Set {
+                        #Color {
+                            width: 20px;
+                            height: 20px;
+                            background-color: rgba(20, 196, 178, 1);
+                        }
+                    }
+                }
             }
         }
         #upload {
             margin: 10px;
+            width: 160px;
+            height: 50px;
             #upload-button {
+                margin-left: 10px;
                 box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+                width: 100%;
                 font-family: "Baloo 2";
             }
         }
         #currentImage {
-            height: 250px;
+            height: 100px;
+            width: 100px;
             margin: 10px;
             #image {
-                margin: 0px auto;
-                width: 250px;
-                height: 250px;
+                margin: 5px 10px;
+                width: 100%;
+                height: 100%;
                 #closet-img {
                     box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
                     border-radius: 10px;
                     ;
-                    width: 250px;
-                    height: 250px;
+                    width: 100%;
+                    height: 100%;
                     object-fit: contain;
                 }
             }
+        }
+        #save-button {
+            margin: 15px;
+            // padding: 5px;
+            width: 80px;
+            height: 40px;
+            background-color: rgba(20, 196, 178, 1);
+            color: white;
+            border-radius: 8px;
+            font-weight: 700;
         }
     }
 }
