--- a/src/components/Closet/Closet.scss
+++ b/src/components/Closet/Closet.scss
@@ -164,17 +164,6 @@
                 }
             }
         }
-        #upload {
-            margin: 10px;
-            width: 160px;
-            height: 50px;
-            #upload-button {
-                margin-left: 10px;
-                box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
-                width: 100%;
-                font-family: "Baloo 2";
-            }
-        }
         #currentImage {
             height: 100px;
             width: 100px;
@@ -189,7 +178,23 @@
                     ;
                     width: 100%;
                     height: 100%;
-                    object-fit: contain;
+                    object-fit: cover;
+                }
+            }
+            #upload {
+                // border: solid red 2px;
+                width: 100%;
+                height: 100%;
+                bottom: 105px;
+                left: 10px;
+                position: relative;
+                #upload-button {
+                    // margin-left: 10px;
+                    border-radius: 10px;
+                    // box-shadow: 0 0 3px rgba(0, 0, 0, 0.4);
+                    width: 100%;
+                    height: 100%;
+                    font-family: "Baloo 2";
                 }
             }
         }
