--- a/src/components/AllProducts/AllProducts.scss
+++ b/src/components/AllProducts/AllProducts.scss
@@ -20,7 +20,7 @@
             grid-gap: 16px;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(210px, max-content));
-            #product {
+            .product {
                 // border: solid red 2px;
                 // padding:
                 background-color: white;
