--- a/src/components/ReusableContainer/SingleClosetFeed.scss
+++ b/src/components/ReusableContainer/SingleClosetFeed.scss
@@ -1,161 +1,161 @@
 #closet {
-    // border: solid red 5px;
-    #text {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-        background-color: rgba(0, 0, 0, 0.05);
-        width: 400px;
-        text-align: left;
-        padding: 3px 0px;
-        #name {
-            // border: solid red 5px;
-            padding-left: 10px;
+  border: solid red 5px;
+  #text {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-color: rgba(0, 0, 0, 0.05);
+    width: 400px;
+    text-align: left;
+    padding: 3px 0px;
+    #name {
+      // border: solid red 5px;
+      padding-left: 10px;
+      display: flex;
+      font-size: 25px;
+      color: rgb(65, 64, 64);
+      font-weight: 600;
+      #user {
+        padding-left: 10px;
+        font-weight: 400;
+      }
+      #closet {
+        background-color: rgb(249, 252, 252);
+        margin-left: 10px;
+        height: 30px;
+        width: 30px;
+        margin: auto 0px auto 15px;
+        font-family: "Baloo 2";
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+      }
+    }
+  }
+  #scrollbar {
+    // border: solid red 2px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+    #display-case {
+      display: flex;
+      justify-content: flex-start;
+      overflow: visible;
+      #product {
+        border-radius: 8px;
+        // border: solid 2px black;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        margin: 5px 15px 0px 15px;
+        cursor: pointer;
+        position: relative;
+        width: 210px;
+        #image {
+          border-radius: 8px;
+          height: 200px;
+          width: 200px;
+          object-fit: contain;
+          background-color: white;
+          padding: 5px;
+        }
+        #overlay {
+          border: solid rgba(0, 0, 0, 0.171) 1px;
+          background-color: rgba(0, 0, 0, 0.02);
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          height: 206px;
+          width: 200px;
+          padding: 5px;
+          border-radius: 35px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          #top {
+            width: 180px;
+            margin-top: 5px;
+            #info {
+              margin-left: auto;
+              background-color: rgba(196, 196, 196, 0.397);
+            }
+          }
+          #bottom {
+            width: 180px;
+            height: 55px;
+            margin: 0px auto -5px auto;
             display: flex;
-            font-size: 25px;
-            color: rgb(65, 64, 64);
-            font-weight: 600;
-            #user {
-                padding-left: 10px;
-                font-weight: 400;
+            #select {
+              margin: auto 0px;
+              // width: 150px;
+              font-size: 12px;
             }
             #closet {
-                background-color: rgb(249, 252, 252);
-                margin-left: 10px;
-                height: 30px;
-                width: 30px;
-                margin: auto 0px auto 15px;
-                font-family: "Baloo 2";
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
+              margin: auto -4px auto 3px;
+              height: 40px;
+              width: 40px;
+              background-color: rgba(19, 173, 158, 0.842);
+              border: solid 2px rgba(19, 173, 158);
+              font-family: "Baloo 2";
             }
+          }
+          #item-saved {
+            border: solid rgb(194, 194, 194) 2px;
+            background-color: #f7f8f898;
+            border-radius: 5px;
+            width: 135px;
+            margin-bottom: 6px;
+            margin-left: 10px;
+            position: relative;
+            font-weight: 600;
+            color: rgb(59, 59, 59);
+            #arrow {
+              position: absolute;
+              bottom: 10px;
+              right: -12px;
+              width: 0px;
+              height: 0px;
+              border-top: 0px solid transparent;
+              border-bottom: 10px solid transparent;
+              border-left: 10px solid rgb(194, 194, 194);
+            }
+          }
         }
-    }
-    #scrollbar {
-        // border: solid red 2px;
-        border-radius: 5px;
-        margin-bottom: 20px;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.05);
-        #display-case {
-            display: flex;
-            justify-content: flex-start;
-            overflow: visible;
-            #product {
-                border-radius: 8px;
-                // border: solid 2px black;
-                box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-                margin: 5px 15px 0px 15px;
-                cursor: pointer;
-                position: relative;
-                width: 210px;
-                #image {
-                    border-radius: 8px;
-                    height: 200px;
-                    width: 200px;
-                    object-fit: contain;
-                    background-color: white;
-                    padding: 5px;
-                }
-                #overlay {
-                    border: solid rgba(0, 0, 0, 0.171) 1px;
-                    background-color: rgba(0, 0, 0, 0.02);
-                    position: absolute;
-                    bottom: 0;
-                    right: 0;
-                    height: 206px;
-                    width: 200px;
-                    padding: 5px;
-                    border-radius: 35px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    #top {
-                        width: 180px;
-                        margin-top: 5px;
-                        #info {
-                            margin-left: auto;
-                            background-color: rgba(196, 196, 196, 0.397);
-                        }
-                    }
-                    #bottom {
-                        width: 180px;
-                        height: 55px;
-                        margin: 0px auto -5px auto;
-                        display: flex;
-                        #select {
-                            margin: auto 0px;
-                            // width: 150px;
-                            font-size: 12px;
-                        }
-                        #closet {
-                            margin: auto -4px auto 3px;
-                            height: 40px;
-                            width: 40px;
-                            background-color: rgba(19, 173, 158, 0.842);
-                            border: solid 2px rgba(19, 173, 158);
-                            font-family: "Baloo 2";
-                        }
-                    }
-                    #item-saved {
-                        border: solid rgb(194, 194, 194) 2px;
-                        background-color: #f7f8f898;
-                        border-radius: 5px;
-                        width: 135px;
-                        margin-bottom: 6px;
-                        margin-left: 10px;
-                        position: relative;
-                        font-weight: 600;
-                        color: rgb(59, 59, 59);
-                        #arrow {
-                            position: absolute;
-                            bottom: 10px;
-                            right: -12px;
-                            width: 0px;
-                            height: 0px;
-                            border-top: 0px solid transparent;
-                            border-bottom: 10px solid transparent;
-                            border-left: 10px solid rgb(194, 194, 194);
-                        }
-                    }
-                }
-                #overlay_saved {
-                    position: absolute;
-                    bottom: 0;
-                    right: 0;
-                    height: 206px;
-                    width: 200px;
-                    padding: 5px;
-                    border-radius: 8px;
-                    text-align: right;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    #check {
-                        width: 50px;
-                        height: 50px;
-                        margin-left: auto;
-                    }
-                }
-            }
-            #space {
-                border: solid rgba(255, 255, 255, 0) 2px;
-            }
-            // &::-webkit-scrollbar {
-            //     width: 8px;
-            //     height: 14px;
-            //   }
-            //     &::-webkit-scrollbar-thumb {
-            //       height: 6px;
-            //       border: 4px solid rgba(0, 0, 0, 0);
-            //       background-clip: padding-box;
-            //       background-color: rgba(0, 0, 0, 0.15);
-            //   }
-            //   &::-webkit-scrollbar-button {
-            //       width: 0;
-            //       height: 0;
-            //       display: none;
-            //   }
-            //   &::-webkit-scrollbar-corner {
-            //       background-color: transparent;
-            //   }
+        #overlay_saved {
+          position: absolute;
+          bottom: 0;
+          right: 0;
+          height: 206px;
+          width: 200px;
+          padding: 5px;
+          border-radius: 8px;
+          text-align: right;
+          display: flex;
+          flex-direction: column;
+          justify-content: flex-end;
+          #check {
+            width: 50px;
+            height: 50px;
+            margin-left: auto;
+          }
         }
+      }
+      #space {
+        border: solid rgba(255, 255, 255, 0) 2px;
+      }
+      // &::-webkit-scrollbar {
+      //     width: 8px;
+      //     height: 14px;
+      //   }
+      //     &::-webkit-scrollbar-thumb {
+      //       height: 6px;
+      //       border: 4px solid rgba(0, 0, 0, 0);
+      //       background-clip: padding-box;
+      //       background-color: rgba(0, 0, 0, 0.15);
+      //   }
+      //   &::-webkit-scrollbar-button {
+      //       width: 0;
+      //       height: 0;
+      //       display: none;
+      //   }
+      //   &::-webkit-scrollbar-corner {
+      //       background-color: transparent;
+      //   }
     }
+  }
 }
