--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -11,6 +11,7 @@
     // border: solid red 2px;
     margin-top: 2px;
     width: 100%;
+
     #results {
       //   border: solid red 2px;
 
@@ -24,11 +25,13 @@
       #row {
         background-color: white;
         display: flex;
-
+        position: relative;
+        z-index: 2000;
         height: 50px;
         align-items: center;
         transition: background-color 0.2s;
         cursor: pointer;
+
         &:hover {
           background-color: rgb(228, 228, 228);
         }
@@ -37,7 +40,6 @@
           margin-left: 5px;
         }
         #text {
-          //   border: solid red 2px;
           margin: 5px auto auto 5px;
           display: flex;
           align-items: center;
